<resources>
    <string name="app_name">admin</string>
    <string name="create_new_user_title">Create New User</string>
    <string name="new_user_fill_out_form_subhead">Please fill out the form below</string>
    <string name="lecturer_radio_btn">Lecturer</string>
    <string name="student_radio_btn">Student</string>
    <string name="new_user_first_name">First Name</string>
    <string name="new_user_last_name">Last Name</string>
    <string name="new_user_email">Email</string>
    <string name="new_user_faculty">Faculty of User</string>
    <string name="new_user_department">Department of User</string>
    <string name="new_student_program_of_study">Program of Study</string>
    <string name="new_lecturer_courses_taught">Courses Taught (Comma Separated)</string>
    <string name="new_user_male_radio_btn">Male</string>
    <string name="new_user_female_radio_btn">Female</string>
    <string name="create_user">Create User</string>
    <string name="search_func_coming_soon">Search Functionality Coming Soon</string>
    <string name="dashboard_send_announcement">News</string>
    <string name="dashboard_card_users">Users</string>
    <string name="dashboard_card_resources">Resources</string>
    <string name="menu_func_coming_soon">Menu Functionality Coming Soon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="item_illustrations">item illustrations</string>
    <string name="user_profile_image">User profile image</string>
    <string name="add_news_button">Add news button</string>
    <string name="news_image">News Image</string>
    <string name="tittle">Tittle</string>
    <string name="save_news">Save News</string>
    <string name="description">Description</string>
    <string name="image_add">Image Add</string>
</resources>