<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.announcements.NewsAddFragment" >

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/onboard_admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_photo_alternate_24"
        app:layout_constraintBottom_toBottomOf="@+id/imagePreview"
        app:layout_constraintEnd_toEndOf="@+id/imagePreview"
        app:layout_constraintStart_toEndOf="@+id/imagePreview"
        app:layout_constraintTop_toBottomOf="@+id/imagePreview" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layTittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagePreview">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTittle"
            android:layout_width="match_parent"
            android:hint="@string/tittle"
            android:maxLines="1"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layDes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/materialButton"
        app:layout_constraintEnd_toEndOf="@+id/layTittle"
        app:layout_constraintStart_toStartOf="@+id/layTittle"
        app:layout_constraintTop_toBottomOf="@+id/layTittle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDesc"
            android:hint="@string/description"
            android:maxLength="100"
            android:gravity="top"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/save_news"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/layTittle"
        app:layout_constraintStart_toStartOf="@+id/layTittle" />

</androidx.constraintlayout.widget.ConstraintLayout>